// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App can navigate to list page and matches snapshot 1`] = `
<div>
  <ion-app>
    <ion-split-pane>
      <ion-menu>
        <ion-header>
          <ion-toolbar>
            <ion-title>
              Menu
            </ion-title>
          </ion-toolbar>
        </ion-header>
        <ion-content>
          <ion-list>
            <ion-menu-toggle>
              <ion-item>
                <ion-icon />
                <ion-label>
                  Menu Link To Home
                </ion-label>
              </ion-item>
            </ion-menu-toggle>
            <ion-menu-toggle>
              <ion-item>
                <ion-icon />
                <ion-label>
                  Menu Link To List
                </ion-label>
              </ion-item>
            </ion-menu-toggle>
          </ion-list>
        </ion-content>
      </ion-menu>
      <div
        class="ion-page"
        id="main"
      >
        <ion-router-outlet>
          <div
            class="ion-page"
            data-testid="list-page"
          >
            <ion-header>
              <ion-toolbar>
                <ion-buttons>
                  <ion-menu-button />
                </ion-buttons>
                <ion-title>
                  List
                </ion-title>
              </ion-toolbar>
            </ion-header>
            <ion-content>
              <ion-list>
                <ion-item>
                  <ion-icon />
                  Item 1
                  <div
                    class="item-note"
                    slot="end"
                  >
                    This is item # 1
                  </div>
                </ion-item>
                <ion-item>
                  <ion-icon />
                  Item 2
                  <div
                    class="item-note"
                    slot="end"
                  >
                    This is item # 2
                  </div>
                </ion-item>
                <ion-item>
                  <ion-icon />
                  Item 3
                  <div
                    class="item-note"
                    slot="end"
                  >
                    This is item # 3
                  </div>
                </ion-item>
                <ion-item>
                  <ion-icon />
                  Item 4
                  <div
                    class="item-note"
                    slot="end"
                  >
                    This is item # 4
                  </div>
                </ion-item>
                <ion-item>
                  <ion-icon />
                  Item 5
                  <div
                    class="item-note"
                    slot="end"
                  >
                    This is item # 5
                  </div>
                </ion-item>
                <ion-item>
                  <ion-icon />
                  Item 6
                  <div
                    class="item-note"
                    slot="end"
                  >
                    This is item # 6
                  </div>
                </ion-item>
                <ion-item>
                  <ion-icon />
                  Item 7
                  <div
                    class="item-note"
                    slot="end"
                  >
                    This is item # 7
                  </div>
                </ion-item>
                <ion-item>
                  <ion-icon />
                  Item 8
                  <div
                    class="item-note"
                    slot="end"
                  >
                    This is item # 8
                  </div>
                </ion-item>
                <ion-item>
                  <ion-icon />
                  Item 9
                  <div
                    class="item-note"
                    slot="end"
                  >
                    This is item # 9
                  </div>
                </ion-item>
                <ion-item>
                  <ion-icon />
                  Item 10
                  <div
                    class="item-note"
                    slot="end"
                  >
                    This is item # 10
                  </div>
                </ion-item>
              </ion-list>
            </ion-content>
          </div>
        </ion-router-outlet>
      </div>
    </ion-split-pane>
  </ion-app>
</div>
`;

exports[`App renders and defaults to home page and matches snapshot 1`] = `
<div>
  <ion-app>
    <ion-split-pane>
      <ion-menu>
        <ion-header>
          <ion-toolbar>
            <ion-title>
              Menu
            </ion-title>
          </ion-toolbar>
        </ion-header>
        <ion-content>
          <ion-list>
            <ion-menu-toggle>
              <ion-item>
                <ion-icon />
                <ion-label>
                  Menu Link To Home
                </ion-label>
              </ion-item>
            </ion-menu-toggle>
            <ion-menu-toggle>
              <ion-item>
                <ion-icon />
                <ion-label>
                  Menu Link To List
                </ion-label>
              </ion-item>
            </ion-menu-toggle>
          </ion-list>
        </ion-content>
      </ion-menu>
      <div
        class="ion-page"
        id="main"
      >
        <ion-router-outlet>
          <div
            class="ion-page"
            data-testid="home-page"
          >
            <ion-header>
              <ion-toolbar>
                <ion-buttons>
                  <ion-menu-button />
                </ion-buttons>
                <ion-title>
                  Home
                </ion-title>
              </ion-toolbar>
            </ion-header>
            <ion-content>
              <ion-card
                class="welcome-card"
                classname="welcome-card"
              >
                <img
                  alt=""
                  src="/assets/shapes.svg"
                />
                <ion-card-header>
                  <ion-card-subtitle>
                    Get Started
                  </ion-card-subtitle>
                  <ion-card-title>
                    Welcome to Ionic
                  </ion-card-title>
                </ion-card-header>
                <ion-card-content>
                  <p>
                    Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.
                  </p>
                </ion-card-content>
              </ion-card>
              <ion-list>
                <ion-list-header>
                  <ion-label>
                    Resources
                  </ion-label>
                </ion-list-header>
                <ion-item>
                  <ion-icon />
                  <ion-label>
                    Ionic Documentation
                  </ion-label>
                </ion-item>
                <ion-item>
                  <ion-icon />
                  <ion-label>
                    Scaffold Out Your App
                  </ion-label>
                </ion-item>
                <ion-item>
                  <ion-icon />
                  <ion-label>
                    Change Your App Layout
                  </ion-label>
                </ion-item>
                <ion-item>
                  <ion-icon />
                  <ion-label>
                    Theme Your App
                  </ion-label>
                </ion-item>
              </ion-list>
            </ion-content>
          </div>
        </ion-router-outlet>
      </div>
    </ion-split-pane>
  </ion-app>
</div>
`;
